Re-generate jextract bindings