@@ -11,12 +11,12 @@ final class constants$200 {
 
     // Suppresses default constructor, ensuring non-instantiability.
     private constants$200() {}
-    static final MemorySegment const$0 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_HIGHDPI_DISABLED");
-    static final MemorySegment const$1 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_MAC_FULLSCREEN_SPACES");
-    static final MemorySegment const$2 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_MINIMIZE_ON_FOCUS_LOSS");
-    static final MemorySegment const$3 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_WAYLAND_ALLOW_LIBDECOR");
-    static final MemorySegment const$4 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_WAYLAND_PREFER_LIBDECOR");
-    static final MemorySegment const$5 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateUtf8String("SDL_VIDEO_WAYLAND_MODE_EMULATION");
+    static final MemorySegment const$0 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_HIGHDPI_DISABLED");
+    static final MemorySegment const$1 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_MAC_FULLSCREEN_SPACES");
+    static final MemorySegment const$2 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_MINIMIZE_ON_FOCUS_LOSS");
+    static final MemorySegment const$3 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_WAYLAND_ALLOW_LIBDECOR");
+    static final MemorySegment const$4 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_WAYLAND_PREFER_LIBDECOR");
+    static final MemorySegment const$5 = RuntimeHelper.CONSTANT_ALLOCATOR.allocateFrom("SDL_VIDEO_WAYLAND_MODE_EMULATION");
 }
 
 
